--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ index.html
                 <div class="redes">
                     <a href="#" href="https://www.facebook.com/belen.bay.27"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fa-solid fa-mailbox"></i></a>
+                    <a href="#"><i class="fa-brands fa-github-alt"></i></a>
                     <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
                 </div>
             </div>
@@ -350,7 +350,7 @@ index.html
             <div class="redes">
           <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fa-solid fa-mailbox"></i></a>
+                    <a href="#"><i class="fa-brands fa-github-alt"></i></a>
                     <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
             </div>
         </footer>
