--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ index.html
             <div class="contenido-banner">
                 
                 <div class="contenedor-img">
-                    <img src="./imagenes/portfoliodesing.jpg" alt="">
+                    <img src="./imagenes/file.jpg" alt="">
                 </div>
                 <h1>belen baigorria</h1>
                 <h2>desarrollo web</h2>
