--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ index.html
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p1.jpg" alt="">
+                    <img src="podex.jpg" alt="">
                     <div class="overlay">
                         <p>Diseño</p>
                     </div>
